Fix spacing on mobile

--- a/src/styles/workEntry.css
+++ b/src/styles/workEntry.css
@@ -66,6 +66,9 @@
   .workEntry {
     flex-direction: column-reverse !important;
   }
+  .workEntryImage {
+    margin-bottom: 2.5em;
+  }
   .workEntryTextPanel {
     padding: 0 !important;
   }
